IntelliJ/tests/invalid/syntax/noterminate.masl
/* invalid: statements not terminated with periods */
Begin Loop, Repeat 10 Times:
    Generate mail
    Increment i
End Loop